# naturalis

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  LICENSE  README.md  example.ipynb  pyproject.toml  setup.py
naturalis/: __init__.py  constants.py  plotting.py  propagator.py
naturalis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
naturalis/dynamics/: orbit.py  propagator.py
naturalis/mathematics/: primer.py
naturalis/naturalis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
naturalis/solvers/: lambert.py  n_burn.py
src/C++/: CMakeLists.txt
src/C++/dynamics/: dynamics.cpp  dynamics.hpp
src/C++/integrators/: integrators.cpp  integrators.hpp
src/C++/orbit/: orbit.hpp
src/C++/propagator/: propagator.cpp  propagator.hpp
src/Python/: propagator.py
src/Python/naturalis/: __init__.py  _cnaturalis.pxd  _cnaturalis.pyx  dynamics.py  mathematics.py  plotting.py  propagator.py
